--- a/app/views/admin/communities/edit.html.erb
+++ b/app/views/admin/communities/edit.html.erb
@@ -11,8 +11,8 @@
 <link rel="stylesheet" type="text/css" href="/js_plugins/colorbox/colorbox.css" />      
 
 <header>
-  <h2 class="left">最新消息</h2>
-  <div class="explain right"><p>圖片尺寸：825 px * 377 px</p></div>
+  <h2 class="left">社群迴響</h2>
+  <nav class="left"></nav>
 </header>
 <article>
   <div class="hgroup">
