--- a/app/views/layouts/admin_sign_in.html.erb
+++ b/app/views/layouts/admin_sign_in.html.erb
@@ -2,16 +2,18 @@
 <html>
 <head>
 <!--[if lt IE 9]>
-<script src="/js/html5.js"></script>
+<script src="/js/admin/html5.js/admin"></script>
 <![endif]-->
 <meta charset="utf-8">
 <meta name="Robots" content="index,follow"/>
 <meta http-equiv="content-language" content="zh-TW" />
-<title>Ladyboo 後台管理系統</title>
-<%= stylesheet_link_tag    "application", media: "all" %>
-<%= javascript_include_tag "application" %>
-<%= csrf_meta_tags %>
-
+<title>LadyBoo 後台管理系統</title>
+<link rel="stylesheet" href="/css/admin/reset.css">
+<!--link rel="stylesheet" href="/css/admin/global.css"-->
+<link rel="stylesheet/less" type="text/css" href="/css/admin/login.less" />
+<script src="/js/admin/jquery.min.js"></script>
+<script src="/js/admin/less.min.js"></script>
+<script src="/js/admin/global.js"></script>
 </head>
 
 <body>
