--- a/app/views/admin/banners/index.html.erb
+++ b/app/views/admin/banners/index.html.erb
@@ -17,7 +17,7 @@
     <% @banners.each do |slide| %>
 
     <div class="thumb left">
-      <%= link_to '刪除', admin_banner_path(slide), method: :delete, data: { confirm: 'Are you sure?' }, class: 'delete', title: '刪除' %>
+      <%= link_to '', admin_banner_path(slide), method: :delete, data: { confirm: 'Are you sure?' }, class: 'delete', title: '刪除' %>
       <%# link_to "編輯", edit_admin_banner_path(slide) %>
       <% if slide.galleries.empty? %>
         <%= image_tag "/sample/sample1.jpg"%>
