--- a/app/views/admin/categories/show.html.erb
+++ b/app/views/admin/categories/show.html.erb
@@ -1,7 +1,6 @@
 <header>
   <h2 class="left">商品管理</h2>
   <nav class="left"></nav>
-  
 </header>
 <article>
 
@@ -39,7 +38,7 @@
             </td>
             <td width="18%">
               <div class="tool">
-                <%= link_to "編輯", "javascript:void(0);", :data => { :id => category.id }, :class => "edit", title:"編輯" %><%= link_to "刪除", admin_category_path(category), :data => { :confirm => "將會刪除分類底下所有商品，確定繼續？" }, :method => :delete, :class => "delete", title: "刪除" %>
+                <%= link_to "", "javascript:void(0);", :data => { :id => category.id }, :class => "edit", title:"編輯" %><%= link_to "", admin_category_path(category), :data => { :confirm => "將會刪除分類底下所有商品，確定繼續？" }, :method => :delete, :class => "delete", title: "刪除" %>
               </div>
             </td>
           </tr>
@@ -52,7 +51,7 @@
             <td width="6%" style="background:url(/images/admin/folder.png) center center no-repeat"></td>
             <td width="76%">
               <div style="position:relative">
-                <%= f.text_field :name, class:"text", placeholder: "分類名稱", style:"width:50%" %>
+                <%= f.text_field :name, class:"text", placeholder: "分類名稱" %>
               </div>
             </td>
             
@@ -127,11 +126,10 @@
             <td width="76%">
               <%= link_to(product.name, edit_admin_category_product_path(@category, product)) %>
               <%= product.ranking%>
-              <%# link_to(get_change_status_name(product), change_status_admin_category_product_path(@category, product), :method => :post) %>
             </td>
             <td width="18%">
               <div class="tool">
-                <%= link_to("編輯", edit_admin_category_product_path(@category, product), class: 'edit') %><%= link_to("刪除", admin_category_product_path(@category, product), :method => :delete, :data => {:confirm => "確定刪除？"}, class: 'delete') %>
+                <%= link_to(get_change_status_name(product),change_status_admin_category_product_path(@category, product), :method => :post) %><%= link_to("", edit_admin_category_product_path(@category, product), class: 'edit') %><%= link_to("", admin_category_product_path(@category, product), :method => :delete, :data => {:confirm => "確定刪除？"}, class: 'delete') %>
               </div>
             </td>
           </tr>
