--- a/app/views/admin/communities/index.html.erb
+++ b/app/views/admin/communities/index.html.erb
@@ -1,3 +1,7 @@
+<header>
+  <h2 class="left">社群迴響</h2>
+  <nav class="left"></nav>
+</header>
 <article>
   <div class="button">
     <%# link_to admin_communities_path(type: "PeditorCommunity"), :method => :post , class:"right highlight" do %>
@@ -20,7 +24,7 @@
           <td width="15%" align="right"><%= community.created_at.strftime("%Y年%m月%d日")%></td>
           <td width="12%">
             <div class="tool">
-              <%= list_edit_btn(community) %><%= link_to("刪除", admin_community_path(community), :method => :delete, :data => {:confirm => "確定刪除？"}, class: "delete") %>
+              <%= list_edit_btn(community) %><%= link_to("", admin_community_path(community), :method => :delete, :data => {:confirm => "確定刪除？"}, class: "delete") %>
             </div>
           </td>
         </tr>
