--- a/app/views/admin/lookbooks/edit.html.erb
+++ b/app/views/admin/lookbooks/edit.html.erb
@@ -1,36 +1,30 @@
     <header>
-      <h2 class="left">lookbook<span> / 首頁管理</span></h2>
+      <h2 class="left"><span>首頁管理 / </span>穿搭主題</h2>
       <nav class="left">
-        <%= link_to 'Lookbook', edit_admin_lookbook_path(@lookbook)%>
-        <%= link_to 'Lookbook Tile', admin_lookbook_tiles_path(@lookbook)%>
+        <%= link_to '基本', edit_admin_lookbook_path(@lookbook), class: 'active' %>
+        <%= link_to '圖片', admin_lookbook_tiles_path(@lookbook)%>
+        <%= "此穿搭主題限制關聯主題數：#{@lookbook.limit}, 已關聯主題數：#{@lookbook.lookbook_topicships.count}" %>
       </nav>
       <div class="explain right"><p>圖片尺寸：</p></div>
     </header>
     <article>
-      <div class="form">
+      <div class="hgroup">
         <%= form_for(@lookbook, :url => admin_lookbook_path(@lookbook), html: { id: "patchthislookbook", multipart: true } ) do |f| %>
+
+        <div class="right">選擇此版型 <%= f.check_box :status, { id: 'grind-ctrl'  }, "enable", "disable" %>
+        </div>
+      </div>
+
+      <div class="form">
+    
           <table width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
-              <td width="7%">Lookbook名稱：</td>
-              <td width="31%">
-               <%= f.text_field :name %>
-              </td>
-              <td width="2%">&nbsp;</td>
-              <td width="7%">關聯主題數：</td>
-              <td width="23%">
-               <%= f.text_field :limit %>
-              </td>
-              <td width="10%">顯示在首頁：</td>
-              <td width="20%">
-               <%= f.check_box :status, { class: 'checkbox'  }, "enable", "disable" %> 是<br>
+              <td width="7%">名稱：</td>
+              <td width="93%">
+                <%= f.text_field :name , class: 'text' %>
               </td>
             </tr>
-            <tr>
-              <td colspan='7'>
-                <%# render 'admin/common/upload_by_type', target_title: '圖' if @gallery_count < @lookbook.limit %>
-                <%# render 'admin/common/show_by_type', target: @lookbook, target_title: '圖', type: 'LookbookPhotoGallery', allow_dragable: true  if @gallery_count > 0 %>
-              </td>
-            </tr>
+            
           </table>
         <% end %>
       </div>
@@ -38,80 +32,101 @@
       <div class="button">
         <%= link_to image_tag("/images/admin/left.png")+"返回", admin_lookbooks_path(), class: "left" %>
         <a href="javascript: document.getElementById('patchthislookbook').submit();" id="sendtheform" class="right highlight" data-no-turbolink = true >變更
-          <img src="<%= image_path("/images/admin/up.png") %>">
+          <img src="<%= image_path("/images/admin/save.png") %>">
         </a>
       </div>
 
     </article>  
-    <br>
-    <%= "此穿搭主題限制關聯主題數：#{@lookbook.limit}, 已關聯主題數：#{@lookbook.lookbook_topicships.count}" %><br>
-
-    <article>
-      <br>== tile(版型) ==<br>
-      <div id='dragable_container' style='width:100%;'>
-        <% @lookbook.tiles.each do |tile| %>
-          <div class='dragable Tilecontainer' style='float:left;' <%= "id=Tilecontainer_#{tile.id.to_s}" %> >
-            <%= link_to "#{tile.id} - Ranking: [#{tile.ranking}]", admin_lookbook_tiles_path(@lookbook) %>
-            <br>
-            <% if tile.galleries.select{ |v| v['type'] == 'TileCoverGallery' }.first %>
-              <%= link_to( image_tag(tile.galleries.select{ |v| v['type'] == 'TileCoverGallery' }.first.attachment.url, class: 'img-responsive', width: 100, height: 100 ) , 'javascript:void(0);') %>
-            <% end %>
-          </div>
-        <% end %>  
-      </div>
-      <p style='clear: left;'>End of Tiles</p>
-    </article>
-
-    <% if @lookbook.lookbook_topicships.count < @lookbook.limit %>
-      <article>
-        <%= form_for(@lookbook_topicship, :url => admin_lookbook_topicships_path(), html: { id: "newthislookbook_topicship" } ) do |f| %>
-          <table width="100%" border="0" cellspacing="0" cellpadding="0">
-            <tr>
-              <td width="7%">新增關聯主題：</td>
-              <td width="31%">
-              <% unless @topics.count == 0 %>
-                <%= f.select :topic_id, options_for_select(@topics.collect { |topic|
-          [topic.name, topic.id] }, @lookbook_topicship.topic_id), {}, { id: 'topic_select' } %>
-              <% else %>
-                無主題可供選擇
-              <% end %>
-              </td>
-              <td width="2%">&nbsp;</td>
-              <td width="7%">&nbsp;</td>
-              <td width="53%"><%= f.hidden_field :lookbook_id, value: @lookbook.id %></td>
-            </tr>
-            <tr>
-              <td valign="top">&nbsp;</td>
-              <td colspan="4">&nbsp;</td>
-            </tr>
-          </table>
-        <% end %>
-
-        <div class="button">
-          <%= link_to image_tag("/images/admin/left.png")+"返回", admin_lookbooks_path(), class: "left" %>
-          <a href="javascript: document.getElementById('newthislookbook_topicship').submit();" id='new_lookbook_topicship' class="right highlight" data-no-turbolink = true >新增主題
-            <img src="<%= image_path("/images/admin/up.png") %>">
-          </a>
-        </div>
-
-      </article>
-    <% end %>
     
-      <br>== 刪除關聯主題 ==<br>
-      <% @lookbook.lookbook_topicships.each do |ship| %>
-        <%= Topic.find(ship.topic_id).name %>
-        <%= link_to '刪除', admin_lookbook_topicship_path(ship.id), method: :delete, data: { confirm: 'Are you sure?' }, class: 'delete', title: '刪除' %>
+    
+
+  <article>
+    <br>== tile(順序) ==<br>
+    <div id='dragable_container' class='gallery' style='width:100%;'>
+      <% @lookbook.tiles.each do |tile| %>
+        <div class='dragable Tilecontainer thumb left' <%= "id=Tilecontainer_#{tile.id.to_s}" %> >
+          <%= link_to "#{tile.id}", admin_lookbook_tiles_path(@lookbook) %>
+          
+          <% if tile.galleries.select{ |v| v['type'] == 'TileCoverGallery' }.first %>
+            <%= link_to( image_tag(tile.galleries.select{ |v| v['type'] == 'TileCoverGallery' }.first.attachment.url, class: 'img-responsive', width: 100, height: 100 ) , 'javascript:void(0);') %>
+          <% end %>
+        </div>
+      <% end %>  
+    </div>
+  </article>
+
+  <% if @lookbook.lookbook_topicships.count < @lookbook.limit %>
+    <article>
+      <%= form_for(@lookbook_topicship, :url => admin_lookbook_topicships_path(), html: { id: "newthislookbook_topicship" } ) do |f| %>
+        <table width="100%" border="0" cellspacing="0" cellpadding="0">
+          <tr>
+            <td width="7%">新增關聯主題：</td>
+            <td width="31%">
+            <% unless @topics.count == 0 %>
+              <%= f.select :topic_id, options_for_select(@topics.collect { |topic|
+        [topic.name, topic.id] }, @lookbook_topicship.topic_id), {}, { id: 'topic_select' } %>
+            <% else %>
+              無主題可供選擇
+            <% end %>
+            </td>
+            <td width="2%">&nbsp;</td>
+            <td width="7%">&nbsp;</td>
+            <td width="53%"><%= f.hidden_field :lookbook_id, value: @lookbook.id %></td>
+          </tr>
+          <tr>
+            <td valign="top">&nbsp;</td>
+            <td colspan="4">&nbsp;</td>
+          </tr>
+        </table>
       <% end %>
 
-    <article>
-      <br>== 已關聯主題產品 ==<br>
-      <% @lookbook.topics.each do |topic| %>
-        <% topic.products.each do |product| %>
-          <%=topic.name%><%= product.name %> = <%= product.price %> / <%= product.price_for_sale %>
-          <br>
-        <% end %>
-      <% end %>  
+      <div class="button">
+        <%= link_to image_tag("/images/admin/left.png")+"返回", admin_lookbooks_path(), class: "left" %>
+        <a href="javascript: document.getElementById('newthislookbook_topicship').submit();" id='new_lookbook_topicship' class="right highlight" data-no-turbolink = true >新增主題
+          <img src="<%= image_path("/images/admin/up.png") %>">
+        </a>
+      </div>
+
     </article>
+  <% end %>
+  
+  <article>
+  刪除關聯主題：
+    <div class="list">
+      <table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <% @lookbook.lookbook_topicships.each do |ship| %>
+          <tr>
+            <td width='88%'>
+              <%= Topic.find(ship.topic_id).name %>
+            </td>
+            <td>
+              <div class='tool'>
+              <%= link_to '', admin_lookbook_topicship_path(ship.id), method: :delete, data: { confirm: 'Are you sure?' }, class: 'delete', title: '刪除' %>  
+              </div>
+            </td>
+          </tr>
+        <% end %>    
+      </table>
+    </div>
+  </article>
+
+  
+  <article>
+  已關聯商品列表：
+    <div class="list">
+      <table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <% @lookbook.topics.each do |topic| %>
+          <% topic.products.each do |product| %>
+          <tr>
+            <td>
+              <%=topic.name%><%= product.name %> = <%= product.price %> / <%= product.price_for_sale %>
+            </td>
+          </tr>
+          <% end %>
+        <% end %>    
+      </table>
+    </div>
+  </article>
 
   <script>
   $(function() {
