--- a/app/views/admin/lookbooks/index.html.erb
+++ b/app/views/admin/lookbooks/index.html.erb
@@ -1,26 +1,34 @@
 <header>
-  <h2 class="left">Lookbook<span> / 首頁管理</span></h2>
+  <h2 class="left"><span>首頁管理 / </span>穿搭主題</h2>
   <nav class="left"></nav>
 </header>
 <article>
   
   <div class="hgroup">
     <div class="button right">
-      <%= link_to new_admin_lookbook_path(), class: "right highlight" do %>
-        新增<img src="/images/admin/add.png">
-      <% end %>
+      <%# link_to new_admin_lookbook_path(), class: "right highlight" do %>
+        <!-- 新增<img src="/images/admin/add.png"> -->
+      <%# end %>
     </div>
   </div>
 
-  <div class="gallery">
-    <% @lookbooks.each do |lookbook| %>
-
-    <div class="thumb left">
-      <%= link_to '刪除', admin_lookbook_path(lookbook), method: :delete, data: { confirm: 'Are you sure?' }, class: 'delete', title: '刪除' %>
-      <%= link_to "編輯Lookbook", edit_admin_lookbook_path(lookbook) %>
-      <%= lookbook.name %>  /  <%= lookbook.status %> / <%= lookbook.limit %>分割
-    </div>
-
-    <% end %>    
+  <div class="list">
+    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+      <% @lookbooks.each do |lookbook| %>
+        <tr>
+          <td width="6%" class="icon">
+            <% if lookbook.status == 'enable' %>
+              <img src="/images/admin/star.png" title="顯示">
+            <% end %>
+          </td>
+          <td width='94%'>
+            <%= link_to lookbook.name, edit_admin_lookbook_path(lookbook) %>
+          </td>
+            <%# link_to "", edit_admin_lookbook_path(lookbook), class: 'edit' %>
+            <%# link_to '', admin_lookbook_path(lookbook), method: :delete, data: { confirm: 'Are you sure?' }, class: 'delete', title: '刪除' %>
+        </tr>
+      <% end %>    
+    </table>
   </div>
+  
 </article>
