--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,48 +1,93 @@
-product#edit
 <header>
-  <h2 class="left">編輯產品</h2>
+  <h2 class="left">商品管理</h2>
   <nav class="left">
-    <%= link_to "Basic", edit_admin_category_product_path(@product.category, @product)%>
-    <%= link_to "Measurement", admin_category_product_measurements_path(@product.category, @product) %>
-    <%= link_to "ProductPhotoGallery", admin_category_product_photo_path(@product.category, @product)%>
-    <%= link_to "Stock", admin_category_product_stocks_path(@product.category, @product)%>
-    <%= link_to "peditor", admin_category_product_free_paragraph_path(@product.category, @product) %>
+    <%= link_to "簡介", edit_admin_category_product_path(@product.category, @product), class: "active" %>
+    <%= link_to "照片", admin_category_product_photo_path(@product.category, @product)%>
+    <%= link_to "尺寸", admin_category_product_measurements_path(@product.category, @product) %>
+    
+    <%= link_to "庫存", admin_category_product_stocks_path(@product.category, @product)%>
+    <%= link_to "內容", admin_category_product_free_paragraph_path(@product.category, @product) %>
   </nav>
 </header>
 
 <article>
   <div class="hgroup">
-      <h3>
-      </h3>
-  </div>
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
-  <div class="form">
-  
-
     <%= form_for(@product, :url => admin_category_product_path(params[:category_id] , @product), html: { id: "patchthisproduct", :multipart => true } ) do |f| %>
-    名稱：<%= f.text_field :name %><br>
-    英文名稱：<%= f.text_field :en_name %><br>
-    價格：<%= f.text_field :price %><br>
-    優惠價：<%= f.text_field :price_for_sale %><br>
-
-    材質<br>
-    desc.<%= f.text_field :material_1 %><br>
-    desc.<%= f.text_field :material_2 %><br>
-
-    洗滌說明<br>
-    desc.<%= f.text_field :wash_1 %><br>
-    desc.<%= f.text_field :wash_2 %><br>
-    desc.<%= f.text_field :wash_3 %><br>
-    
-    模特兒資料<br>
-    desc.<%= f.text_field :model_1 %><br>
-    desc.<%= f.text_field :model_2 %><br>
-
-    is_new<br>
-    NEW標簽：<%= f.check_box :is_new, { class: 'checkbox'  }, "yes", "no" %> 是<br>
-    highlight<br>
-    促銷文字<%= f.text_field :highlight, class: 'highlight_text' %><br>
+    <div class="right">New! 最新商品 <%= f.check_box :is_new, { id: 'grind-ctrl'  }, "yes", "no" %>
+    </div>
+    </div> 
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+   <div class="form">
+      <table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+          <td width="7%">中文：</td>
+          <td width="41%"><%= f.text_field :name, class: 'text', placeholder: "商品中文名"%></td>
+          <td width="2%"></td>
+          <td width="7%">英文：</td>
+          <td width="41%"><%= f.text_field :en_name, class: 'text', placeholder: "商品英文名" %></td>
+        </tr>           
+      </table>
+    </div><!--form--> 
+    <div class="form">
+      <table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+          <td width="7%">價格：</td>
+          <td width="41%"><%= f.text_field :price, class: 'text', placeholder: "價格"%></td>
+          <td width="2%"></td>
+          <td width="7%">優惠價：</td>
+          <td width="41%"><%= f.text_field :price_for_sale, class: 'text', placeholder: "優惠價" %></td>
+        </tr>           
+      </table>
+    </div><!--form--> 
+    <div class="form">
+      <table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+          <td width="9%" valign="top">材質：</td>
+          <td width="91%"><%= f.text_field :material_1, class: 'text' %></td>
+        </tr> 
+        <tr>
+          <td width="9%" valign="top">材質：</td>
+          <td width="91%"><%= f.text_field :material_2, class: 'text' %></td>
+        </tr>                     
+      </table>
+    </div>
+    <div class="form">
+      <table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+          <td width="9%" valign="top">洗滌說明：</td>
+          <td width="91%"><%= f.text_field :wash_1, class: 'text' %></td>
+        </tr> 
+        <tr>
+          <td width="9%" valign="top">洗滌說明：</td>
+          <td width="91%"><%= f.text_field :wash_2, class: 'text' %></td>
+        </tr>         
+        <tr>
+          <td width="9%" valign="top">洗滌說明：</td>
+          <td width="91%"><%= f.text_field :wash_3, class: 'text' %></td>
+        </tr>                     
+      </table>
+    </div>
+    <div class="form">
+      <table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+          <td width="9%" valign="top">模特兒資料：</td>
+          <td width="91%"><%= f.text_field :model_1, class: 'text' %></td>
+        </tr> 
+        <tr>
+          <td width="9%" valign="top">模特兒資料：</td>
+          <td width="91%"><%= f.text_field :model_2, class: 'text' %></td>
+        </tr>         
+      </table>
+    </div>
+    <div class="form">
+      <table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+          <td width="9%" valign="top">促銷文字：</td>
+          <td width="91%"><%= f.text_field :highlight, class: 'text', placeholder: '最多四字' %></td>
+        </tr> 
+      </table>
+    </div>
 
     <% if @gallery_count > 0 %>
       <%= render 'admin/common/show_by_type', target: @product, target_title: '圖', type: 'ProductCoverGallery', allow_dragable: false %>
@@ -50,21 +95,23 @@ product#edit
       COVER <%= render 'admin/common/upload_by_type', target_title: '圖' %>
     <% end %>
     
-    <%= f.submit 'Save' %><br>
+    <div class="button"> 
+      <%= link_to admin_category_path(@product.category) , class: 'left' do %>
+        <img src="/images/admin/left.png">返回
+      <% end %>
+      <%= content_tag :button, type: :submit, class: 'right highlight' do %>
+        儲存<img src="/images/admin/save.png">
+      <% end %>
+    </div>
 
   <% end %>
-  
-  </div>
-
   
   <!-- <div class="button"> 
     <a href="javascript: document.getElementById('patchthisproduct').submit();" class="right highlight" data-no-turbolink = true >儲存<img src="<%# image_path("save.png") %>"></a>
     
    </div> -->
-
+  
 </article>
-
-<%= link_to "返回", admin_category_path(@product.category) %>
 
 <script type="text/javascript">
 $(document).ready(function(){
