--- a/app/views/admin/products/free_paragraph.html.erb
+++ b/app/views/admin/products/free_paragraph.html.erb
@@ -7,11 +7,11 @@
 <header>
   <h2 class="left">商品管理</h2>
   <nav class="left">
-    <%= link_to "Basic", edit_admin_category_product_path(@product.category, @product)%>
-    <%= link_to "Measurement", admin_category_product_measurements_path(@product.category, @product) %>
-    <%= link_to "ProductPhotoGallery", admin_category_product_photo_path(@product.category, @product)%>
-    <%= link_to "Stock", admin_category_product_stocks_path(@product.category, @product)%>
-    <%= link_to "peditor", admin_category_product_free_paragraph_path(@product.category, @product), class: "active"%>
+    <%= link_to "簡介", edit_admin_category_product_path(@product.category, @product) %>
+    <%= link_to "照片", admin_category_product_photo_path(@product.category, @product) %>
+    <%= link_to "尺寸", admin_category_product_measurements_path(@product.category, @product) %>
+    <%= link_to "庫存", admin_category_product_stocks_path(@product.category, @product) %>
+    <%= link_to "內容", admin_category_product_free_paragraph_path(@product.category, @product) , class: "active" %>
   </nav>
 </header>
 <article data-no-turbolink>
@@ -27,7 +27,7 @@
 
   <div class="button"> 
     <%= link_to image_tag("/images/admin/left.png")+"返回", admin_category_path(@product.category), class: "left" %>
-    <a href="javascript: document.getElementById('patchthisproduct').submit();" class="right highlight" data-no-turbolink = true >儲存<img src="<%= image_path("save.png") %>"></a>
+    <a href="javascript: document.getElementById('patchthisproduct').submit();" class="right highlight" data-no-turbolink = true >儲存<img src="<%= image_path("/images/admin/save.png") %>"></a>
   </div>
 
 </article>
