--- a/app/views/admin/products/photo.html.erb
+++ b/app/views/admin/products/photo.html.erb
@@ -1,16 +1,17 @@
-= photo =
 <header>
-  <h2 class="left">編輯產品</h2>
+  <h2 class="left">商品管理</h2>
   <nav class="left">
-    <%= link_to "Basic", edit_admin_category_product_path(@product.category, @product)%>
-    <%= link_to "Measurement", admin_category_product_measurements_path(@product.category, @product) %>
-    <%= link_to "ProductPhotoGallery", admin_category_product_photo_path(@product.category, @product)%>
-    <%= link_to "Stock", admin_category_product_stocks_path(@product.category, @product)%>
-    <%= link_to "peditor", admin_category_product_free_paragraph_path(@product.category, @product) %>
+    <%= link_to "簡介", edit_admin_category_product_path(@product.category, @product) %>
+    <%= link_to "照片", admin_category_product_photo_path(@product.category, @product) , class: "active" %>
+    <%= link_to "尺寸", admin_category_product_measurements_path(@product.category, @product) %>
+    
+    <%= link_to "庫存", admin_category_product_stocks_path(@product.category, @product)%>
+    <%= link_to "內容", admin_category_product_free_paragraph_path(@product.category, @product) %>
   </nav>
+  <div class="explain right"><p>圖片尺寸：1250px * 1250px</p></div>
 </header>
 
-<%# if @gallery_count < 1 %>
+<article>
 
   <%= simple_form_for(@product, :url => admin_category_product_upload_photo_path(params[:category_id] , @product), html: { id: "patchthisproduct", :multipart => true } ) do |f| %>
 
@@ -18,12 +19,20 @@
     
     <%= f.hidden_field :status, :value => 'enable' %>
 
-    <%= f.submit 'Save' %><br>
+    <div class="button"> 
+      <%= content_tag :button, type: :submit, class: 'right highlight' do %>
+        上傳<img src="/images/admin/up.png">
+      <% end %>
+    </div>
 
   <% end %>
-  
-<%# end %>
 
 <%= render 'admin/common/show_by_type', target: @product, target_title: '圖', type: 'ProductPhotoGallery', allow_dragable: true %>
 
-<%= link_to "返回", admin_category_path(@product.category) %>
+<div class="button"> 
+  <%= link_to admin_category_path(@product.category), class: 'left' do  %>
+    <img src="/images/admin/left.png">返回
+  <% end %>
+</div>
+
+</article>
