--- a/app/views/admin/stocks/index.html.erb
+++ b/app/views/admin/stocks/index.html.erb
@@ -1,14 +1,14 @@
 <header>
-<h2 class="left">商品管理</h2>
-<nav class="left">
-  <%= link_to "Basic", edit_admin_category_product_path(@product.category, @product)%>
-  <%= link_to "Measurement", admin_category_product_measurements_path(@product.category, @product) %>
-  <%= link_to "ProductPhotoGallery", admin_category_product_photo_path(@product.category, @product)%>
-  <%= link_to "Stock", admin_category_product_stocks_path(@product.category, @product)%>
-  <%= link_to "peditor", admin_category_product_free_paragraph_path(@product.category, @product) %>
-</nav>
-
+  <h2 class="left">商品管理</h2>
+  <nav class="left">
+    <%= link_to "簡介", edit_admin_category_product_path(@product.category, @product) %>
+    <%= link_to "照片", admin_category_product_photo_path(@product.category, @product) %>
+    <%= link_to "尺寸", admin_category_product_measurements_path(@product.category, @product) %>
+    <%= link_to "庫存", admin_category_product_stocks_path(@product.category, @product) , class: "active" %>
+    <%= link_to "內容", admin_category_product_free_paragraph_path(@product.category, @product) %>
+  </nav>
 </header>
+
 <article>
   <div class="hgroup">
     <h3 class="left">分類列表</h3>
@@ -28,8 +28,8 @@
           </td>
           <td width="18%" align="right">
             <div class="tool">
-              <%= link_to "Edit", "javascript:void(0);", :data => { :id => stock.id }, :class => "edit" %>
-              <%= link_to "Delete", "stocks/#{stock.id}", :data => { :confirm => "將會刪除庫存，確定繼續？" }, :method => :delete, :class => "delete" %>
+              <%= link_to "", "javascript:void(0);", :data => { :id => stock.id }, :class => "edit" %>
+              <%= link_to "", "stocks/#{stock.id}", :data => { :confirm => "將會刪除庫存，確定繼續？" }, :method => :delete, :class => "delete" %>
             </div>
           </td>
         </tr>
