--- a/app/views/admin/topics/edit.html.erb
+++ b/app/views/admin/topics/edit.html.erb
@@ -1,36 +1,40 @@
     <header>
-      <h2 class="left">Topic<span> / 首頁管理</span></h2>
+      <h2 class="left">基本主題</h2>
       <nav class="left">
-        <%= link_to 'Basic', edit_admin_topic_path(@topic) %>
-        <%= link_to 'Banner', admin_topic_photo_path(@topic) %>
+        <%= link_to '商品', edit_admin_topic_path(@topic), class: 'active' %>
+        <%= link_to '封面', admin_topic_photo_path(@topic) %>
       </nav>
-      <div class="explain right"><p>圖片尺寸：</p></div>
+      <div class="explain right"><p>圖片尺寸：1250px * 500px</p></div>
     </header>
     <article>
-      <div class="form">
+      
+        <div class="hgroup">
+          <h3 class="left"><span>主題列表 / </span><%= @topic.name %></h3>
+        </div>
+        <div class="form">
         <%= form_for(@topic, :url => admin_topic_path(@topic), html: { id: "patchthistopic" , :multipart => true} ) do |f| %>
           <table width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
               <td width="7%">主題名稱：</td>
-              <td width="31%">
+              <td width="93%">
                <%= f.text_field :name %>
-              </td>
-              <td width="2%">&nbsp;</td>
-              <td width="7%">&nbsp;</td>
-              <td width="53%">
-               <% if @gallery_count > 0 %>
-                  <%= render 'admin/common/show_by_type', target: @topic, target_title: '圖', type: 'TopicCoverGallery', allow_dragable: false %>
+            </tr>
+            <tr>
+              <td>&nbsp;</td>
+              <td width="93%">
+              <% if @gallery_count > 0 %>
+                  <%= render 'admin/common/show_by_type', target: @topic, target_title: '縮圖', type: 'TopicCoverGallery', allow_dragable: false %>
                <% else %>
-                 首頁 Cover <%= render 'admin/common/upload_by_type', target_title: '圖' %>
+                 <%= render 'admin/common/upload_by_type', target_title: '縮圖' %>
                <% end %>
-              </td>
+               </td>
             </tr>
           </table>
         <% end %>
-      </div>
+        </div>
+      
 
       <div class="button">
-        <%= link_to image_tag("/images/admin/left.png")+"返回", admin_topics_path(), class: "left" %>
         <a href="javascript: document.getElementById('patchthistopic').submit();" id="sendtheform" class="right highlight" data-no-turbolink = true >變更
           <img src="<%= image_path("/images/admin/up.png") %>">
         </a>
@@ -63,17 +67,34 @@
       <% end %>
 
       <div class="button">
-        <%= link_to image_tag("/images/admin/left.png")+"返回", admin_topics_path(), class: "left" %>
-        <a href="javascript: document.getElementById('newthistopic_productship').submit();" id='new_topic_productship' class="right highlight" data-no-turbolink = true >新增主題商品
-          <img src="<%= image_path("/images/admin/up.png") %>">
+        <a href="javascript: document.getElementById('newthistopic_productship').submit();" id='new_topic_productship' class="right highlight" data-no-turbolink = true >加入商品
+          <img src="<%= image_path("/images/admin/down.png") %>">
         </a>
       </div>
 
-    </article>
-    已關聯商品<br>
-      <% @topic.products.each do |product| %>
-        <%= product.name %> = <%= product.price %> / <%= product.price_for_sale %><br>
-      <% end %>
-    <article>
-      
+      <div class="list">
+        <table width="100%" border="0" cellspacing="0" cellpadding="0">
+          
+          
+          <% @topic.topic_productships.each do |topic_productship| %>
+            <% current_product = topic_productship.product %>
+            <% if current_product %>
+              <tr>
+                <td width="18%"><%= current_product.product_no %></td>
+                <td width="64%"><%= link_to current_product.name, category_product_path(current_product.category, current_product) %></td>
+                <td width="18%">
+                  <div class="tool"> 
+                    <%= link_to '', admin_topic_productship_path(topic_productship), method: :delete, data: { confirm: 'Are you sure?' }, class: 'delete', title: '刪除' %>
+                  </div>
+                </td>
+              </tr>
+            <% end %>
+          <% end %>
+
+        </table>
+      </div>
+
+      <div class="button">
+        <%= link_to image_tag("/images/admin/left.png")+"返回", admin_topics_path(), class: "left" %>
+      </div>
     </article>
