--- a/app/views/admin/topics/new.html.erb
+++ b/app/views/admin/topics/new.html.erb
@@ -1,5 +1,5 @@
     <header>
-      <h2 class="left">TOPIC<span> / 首頁管理</span></h2>
+      <h2 class="left">新增基本主題</h2>
       <nav class="left"></nav>
       <div class="explain right"><p>圖片尺寸：1250 px * 500 px</p></div>
     </header>
