--- a/app/views/admin/topics/photo.html.erb
+++ b/app/views/admin/topics/photo.html.erb
@@ -1,37 +1,36 @@
     <header>
-      <h2 class="left">topic<span> / 首頁管理</span></h2>
+      <h2 class="left">基本主題</h2>
       <nav class="left">
-        <%= link_to 'Basic', edit_admin_topic_path(@topic) %>
-        <%= link_to 'Banner', admin_topic_photo_path(@topic) %>
+        <%= link_to '商品', edit_admin_topic_path(@topic) %>
+        <%= link_to '封面', admin_topic_photo_path(@topic), class: 'active' %>
       </nav>
-      <div class="explain right"><p>圖片尺寸：</p></div>
+      <div class="explain right"><p>圖片尺寸：1250px * 500px</p></div>
     </header>
     <article>
+      <div class="hgroup">
+        <h3 class="left"><span>主題列表 / </span><%= @topic.name %></h3>
+      </div>
       <div class="form">
         <%= form_for(@topic, :url => admin_topic_upload_photo_path(@topic), html: { id: "patchthistopic" , :multipart => true } ) do |f| %>
-          <table width="100%" border="0" cellspacing="0" cellpadding="0">
+          
+          <table width="100%" border="0" cellspacing="0" cellpadding="0">  
             <tr>
-              <td width="7%">topic名稱：</td>
-              <td width="31%">
-               <%= @topic.name %>
-               <%= f.hidden_field :name %>
-              </td>
-              <td width="2%">&nbsp;</td>
-              <td width="7%">&nbsp;</td>
-              <td width="53%">
+              <td width="7%" valign="top">封面：</td>
+              <td width="93%">
                 <% if @gallery_count > 0 %>
                   <%= render 'admin/common/show_by_type', target: @topic, target_title: '圖', type: 'TopicBannerGallery', allow_dragable: false %>
                 <% else %>
-                  列表頁 Banner <%= render 'admin/common/upload_by_type', target_title: '圖' %>
+                  <%= render 'admin/common/upload_by_type', target_title: '圖' %>
                 <% end %>
+              <%= f.hidden_field :name %>
               </td>
-            </tr>
+            </tr>          
           </table>
+          
         <% end %>
       </div>
 
       <div class="button">
-        <%= link_to image_tag("/images/admin/left.png")+"返回", admin_topics_path(), class: "left" %>
         <a href="javascript: document.getElementById('patchthistopic').submit();" id="sendtheform" class="right highlight" data-no-turbolink = true >變更
           <img src="<%= image_path("/images/admin/up.png") %>">
         </a>
