--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -25,9 +25,9 @@
       <div class="hgroup">
         <div class="button right">
           <%# link_to "Download CSV", export_admin_users_path(format: "csv") %> 
-          <%= link_to export_admin_users_path(format: "xls") , class: "right highlight" do %>
-            名單下載 <img src="/images/admin/offshelf.png">
-          <% end %>
+          <%# link_to export_admin_users_path(format: "xls") , class: "right highlight" do %>
+            <!-- 名單下載 <img src="/images/admin/offshelf.png"> -->
+          <%# end %>
 
         </div>
       </div>
