--- a/app/views/layouts/clean.html.erb
+++ b/app/views/layouts/clean.html.erb
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-  <title>Ladyboo</title>
-  <!--[if lt IE 9]>
-    <script src="/js/html5.js"></script>
-  <![endif]-->
-  <meta charset="utf-8">
-  <meta name="Robots" content="index,follow"/>
-  <meta http-equiv="content-language" content="zh-TW" />
-  <%= stylesheet_link_tag    "application", media: "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-  <link rel="stylesheet" href="/css/admin/reset.css">
-  <link rel="stylesheet" href="/css/admin/iframe.css">
+<!--[if lt IE 9]>
+<script src="/js/admin/html5.js"></script>
+<![endif]-->
+<meta charset="utf-8">
+<meta name="Robots" content="index,follow"/>
+<meta http-equiv="content-language" content="zh-TW" />
+<title>LadyBoo 後台管理系統</title>
+<link rel="stylesheet" href="/css/admin/reset.css">
+<link rel="stylesheet/less" type="text/css" href="/css/admin/iframe.css"/>
+<script src="/js/admin/jquery.min.js"></script>
+<script src="/js/admin/less.min.js"></script>
+<script src="/js/admin/global.js"></script>
 </head>
+
 <body>
 <%# using by admin iframe pages %>
 <%= yield %>
