--- a/app/views/admin/lookbooks/edit.html.erb
+++ b/app/views/admin/lookbooks/edit.html.erb
@@ -83,7 +83,7 @@
       <div class="button">
         <%= link_to image_tag("/images/admin/left.png")+"返回", admin_lookbooks_path(), class: "left" %>
         <a href="javascript: document.getElementById('newthislookbook_topicship').submit();" id='new_lookbook_topicship' class="right highlight" data-no-turbolink = true >新增主題
-          <img src="<%= image_path("/images/admin/up.png") %>">
+          <img src="<%= image_path("/images/admin/down.png") %>">
         </a>
       </div>
 
