--- a/app/views/layouts/clean.html.erb
+++ b/app/views/layouts/clean.html.erb
@@ -10,7 +10,7 @@
 <title>LadyBoo 後台管理系統</title>
 <link rel="stylesheet" href="/css/admin/reset.css">
 <link rel="stylesheet/less" type="text/css" href="/css/admin/iframe.css"/>
-<script src="/js/admin/jquery.min.js"></script>
+<script src="/js/admin/jquery.js"></script>
 <script src="/js/admin/less.min.js"></script>
 <script src="/js/admin/global.js"></script>
 </head>
