pre-add facebook appid

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -42,7 +42,7 @@
                   <li>
                     <a href='<%= "#{attach.attachment.url}" %>' class='cloud-zoom-gallery' title='' rel="useZoom: 'zoom1', smallImage: '<%= "#{attach.attachment.url}" %>'"> 
                     
-                      <img class="zoom-tiny-image active-slide" src=<%= "#{attach.attachment.url}" %>   />
+                      <img class="zoom-tiny-image" src=<%= "#{attach.attachment.url}" %>   />
                     </a>
                   </li>
                 <% end %>
