--- a/app/views/layouts/useradmin.html.erb
+++ b/app/views/layouts/useradmin.html.erb
@@ -51,13 +51,21 @@
 <body>
  <div id="fb-root"></div>
   <script>
-  // (function(d, s, id) {
-  //     var js, fjs = d.getElementsByTagName(s)[0];
-  //     if (d.getElementById(id)) return;
-  //     js = d.createElement(s); js.id = id;
-  //     js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&appId=477202859073516&version=v2.0";
-  //     fjs.parentNode.insertBefore(js, fjs);
-  //   }(document, 'script', 'facebook-jssdk'));
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId      : '380171498811984',
+        xfbml      : true,
+        version    : 'v2.2'
+      });
+    };
+
+    (function(d, s, id){
+       var js, fjs = d.getElementsByTagName(s)[0];
+       if (d.getElementById(id)) {return;}
+       js = d.createElement(s); js.id = id;
+       js.src = "//connect.facebook.net/en_US/sdk.js";
+       fjs.parentNode.insertBefore(js, fjs);
+     }(document, 'script', 'facebook-jssdk'));
   </script>
   <div id="wrapper">
     <!--Header Start**************************************************************************************************************--> 
@@ -255,6 +263,8 @@
  
   <script src="/js/bootstrap.min.js"></script> 
   <script src="/js/jquery.flexslider-min.js"></script> 
+  <script src="/js/jquery.colorbox.js"></script> 
+  <script src="/js/jquery.bxslider.min.js"></script> 
   <script src="/js/jquery.themepunch.plugins.min.js"></script> 
   <script src="/js/jquery.themepunch.revolution.min.js"></script> 
   
